[package]
name = "mysa_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
aws-config = "0.49.0"
aws-sdk-cognitoidentityprovider = "0.19.0"
cognito_srp = "0.1.2"
futures = "0.3.24"
maplit = "1.0.2"
paho-mqtt = "0.11.1"
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full", "macros"] }
tokio-stream = "0.1.10"
